--- a/index.html
+++ b/index.html
@@ -187,6 +187,9 @@
             <div class="copyright">
                 @1996-2023, Amazon.com, Inc. or its affiliates
             </div>
+            <div class="copyright">
+                clone developed and created by srinivas. <a href="https://www.linkedin.com/in/srinivas123/" target="_blank">press here to know me</a>
+            </div>
         </div>
     </footer>
 
